parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    COMMENT
    SAME

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAMA ID SEMICOLON vars funcion principal
Rule 2     program -> PROGRAMA ID SEMICOLON funcion principal
Rule 3     program -> PROGRAMA ID SEMICOLON vars principal
Rule 4     program -> PROGRAMA ID SEMICOLON principal
Rule 5     principal -> PRINCIPAL LPAREN RPAREN bloque
Rule 6     vars -> VAR vars_aux
Rule 7     vars_aux -> tipo_simple vars_aux1
Rule 8     vars_aux -> tipo_simple vars_aux1 vars_aux
Rule 9     vars_aux1 -> vars_aux2 SEMICOLON
Rule 10    vars_aux1 -> vars_aux2 COMMA vars_aux1
Rule 11    vars_aux2 -> ID
Rule 12    vars_aux2 -> ID LSQUARE CTE_I RSQUARE
Rule 13    vars_aux2 -> ID LSQUARE CTE_I RSQUARE LSQUARE CTE_I RSQUARE
Rule 14    tipo_simple -> INT
Rule 15    tipo_simple -> FLOAT
Rule 16    tipo_simple -> CHAR
Rule 17    variable -> ID LSQUARE exp RSQUARE LSQUARE exp RSQUARE
Rule 18    variable -> ID LSQUARE exp RSQUARE
Rule 19    variable -> ID
Rule 20    funcion -> FUNCION LESSTHAN tipo_simple GREATERTHAN ID LPAREN param RPAREN vars SEMICOLON bloque
Rule 21    funcion -> FUNCION LESSTHAN tipo_simple GREATERTHAN ID LPAREN param RPAREN SEMICOLON bloque
Rule 22    funcion -> FUNCION LESSTHAN VOID GREATERTHAN ID LPAREN param RPAREN vars SEMICOLON bloque
Rule 23    funcion -> FUNCION LESSTHAN VOID GREATERTHAN ID LPAREN param RPAREN SEMICOLON bloque
Rule 24    param -> ID
Rule 25    param -> ID param
Rule 26    param -> empty
Rule 27    empty -> <empty>
Rule 28    bloque -> LBRACKET mult_estatutos RBRACKET
Rule 29    mult_estatutos -> estatuto
Rule 30    mult_estatutos -> estatuto mult_estatutos
Rule 31    mult_estatutos -> empty
Rule 32    estatuto -> asigna
Rule 33    estatuto -> llamada
Rule 34    estatuto -> lee
Rule 35    estatuto -> escribe
Rule 36    estatuto -> condicion
Rule 37    estatuto -> ciclo_w
Rule 38    estatuto -> retorno
Rule 39    estatuto -> ciclo_f
Rule 40    asigna -> variable EQUAL exp SEMICOLON
Rule 41    llamada -> ID LPAREN mult_exp RPAREN
Rule 42    mult_exp -> exp
Rule 43    mult_exp -> exp COMMA mult_exp
Rule 44    mult_exp -> empty
Rule 45    lee -> LEE LPAREN variable RPAREN
Rule 46    escribe -> ESCRIBE LPAREN mult_exp RPAREN SEMICOLON
Rule 47    escribe -> LPAREN mult_cte_s RPAREN SEMICOLON
Rule 48    mult_cte_s -> CTE_S
Rule 49    mult_cte_s -> CTE_S COMMA mult_cte_s
Rule 50    mult_cte_s -> empty
Rule 51    exp -> t_exp OR exp
Rule 52    exp -> t_exp
Rule 53    t_exp -> g_exp AND t_exp
Rule 54    t_exp -> g_exp
Rule 55    g_exp -> m_exp
Rule 56    g_exp -> LESSTHAN m_exp
Rule 57    g_exp -> LESSEQUAL m_exp
Rule 58    g_exp -> GREATERTHAN m_exp
Rule 59    g_exp -> GREATEREQUAL m_exp
Rule 60    g_exp -> EQUAL m_exp
Rule 61    g_exp -> NOEQUAL m_exp
Rule 62    m_exp -> t
Rule 63    m_exp -> t PLUS m_exp
Rule 64    m_exp -> t MINUS m_exp
Rule 65    t -> f
Rule 66    t -> f MULT t
Rule 67    t -> f DIV t
Rule 68    t -> f DETER t
Rule 69    t -> f TRANS t
Rule 70    t -> f INVER t
Rule 71    f -> LPAREN exp RPAREN
Rule 72    f -> CTE_I
Rule 73    f -> CTE_F
Rule 74    f -> CTE_C
Rule 75    f -> variable
Rule 76    f -> llamada
Rule 77    condicion -> SI LPAREN exp RPAREN ENTONCES bloque SINO bloque SEMICOLON
Rule 78    condicion -> SI LPAREN exp RPAREN ENTONCES bloque SEMICOLON
Rule 79    ciclo_w -> MIENTRAS LPAREN exp RPAREN HAZ bloque
Rule 80    ciclo_f -> DESDE asigna HASTA CTE_I HACER bloque
Rule 81    var_cte -> exp
Rule 82    var_cte -> CTE_I
Rule 83    var_cte -> CTE_F
Rule 84    retorno -> REGRESA exp SEMICOLON

Terminals, with rules where they appear

AND                  : 53
CHAR                 : 16
COLON                : 
COMMA                : 10 43 49
COMMENT              : 
CTE_C                : 74
CTE_F                : 73 83
CTE_I                : 12 13 13 72 80 82
CTE_S                : 48 49
DESDE                : 80
DETER                : 68
DIV                  : 67
ENTONCES             : 77 78
EQUAL                : 40 60
ESCRIBE              : 46
FLOAT                : 15
FUNCION              : 20 21 22 23
GREATEREQUAL         : 59
GREATERTHAN          : 20 21 22 23 58
HACER                : 80
HASTA                : 80
HAZ                  : 79
ID                   : 1 2 3 4 11 12 13 17 18 19 20 21 22 23 24 25 41
INT                  : 14
INVER                : 70
LBRACKET             : 28
LEE                  : 45
LESSEQUAL            : 57
LESSTHAN             : 20 21 22 23 56
LPAREN               : 5 20 21 22 23 41 45 46 47 71 77 78 79
LSQUARE              : 12 13 13 17 17 18
MIENTRAS             : 79
MINUS                : 64
MULT                 : 66
NOEQUAL              : 61
OR                   : 51
PLUS                 : 63
PRINCIPAL            : 5
PROGRAMA             : 1 2 3 4
RBRACKET             : 28
REGRESA              : 84
RPAREN               : 5 20 21 22 23 41 45 46 47 71 77 78 79
RSQUARE              : 12 13 13 17 17 18
SAME                 : 
SEMICOLON            : 1 2 3 4 9 20 21 22 23 40 46 47 77 78 84
SI                   : 77 78
SINO                 : 77
TRANS                : 69
VAR                  : 6
VOID                 : 22 23
error                : 

Nonterminals, with rules where they appear

asigna               : 32 80
bloque               : 5 20 21 22 23 77 77 78 79 80
ciclo_f              : 39
ciclo_w              : 37
condicion            : 36
empty                : 26 31 44 50
escribe              : 35
estatuto             : 29 30
exp                  : 17 17 18 40 42 43 51 71 77 78 79 81 84
f                    : 65 66 67 68 69 70
funcion              : 1 2
g_exp                : 53 54
lee                  : 34
llamada              : 33 76
m_exp                : 55 56 57 58 59 60 61 63 64
mult_cte_s           : 47 49
mult_estatutos       : 28 30
mult_exp             : 41 43 46
param                : 20 21 22 23 25
principal            : 1 2 3 4
program              : 0
retorno              : 38
t                    : 62 63 64 66 67 68 69 70
t_exp                : 51 52 53
tipo_simple          : 7 8 20 21
var_cte              : 
variable             : 40 45 75
vars                 : 1 3 20 22
vars_aux             : 6 8
vars_aux1            : 7 8 10
vars_aux2            : 9 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAMA ID SEMICOLON vars funcion principal
    (2) program -> . PROGRAMA ID SEMICOLON funcion principal
    (3) program -> . PROGRAMA ID SEMICOLON vars principal
    (4) program -> . PROGRAMA ID SEMICOLON principal

    PROGRAMA        shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAMA . ID SEMICOLON vars funcion principal
    (2) program -> PROGRAMA . ID SEMICOLON funcion principal
    (3) program -> PROGRAMA . ID SEMICOLON vars principal
    (4) program -> PROGRAMA . ID SEMICOLON principal

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAMA ID . SEMICOLON vars funcion principal
    (2) program -> PROGRAMA ID . SEMICOLON funcion principal
    (3) program -> PROGRAMA ID . SEMICOLON vars principal
    (4) program -> PROGRAMA ID . SEMICOLON principal

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAMA ID SEMICOLON . vars funcion principal
    (2) program -> PROGRAMA ID SEMICOLON . funcion principal
    (3) program -> PROGRAMA ID SEMICOLON . vars principal
    (4) program -> PROGRAMA ID SEMICOLON . principal
    (6) vars -> . VAR vars_aux
    (20) funcion -> . FUNCION LESSTHAN tipo_simple GREATERTHAN ID LPAREN param RPAREN vars SEMICOLON bloque
    (21) funcion -> . FUNCION LESSTHAN tipo_simple GREATERTHAN ID LPAREN param RPAREN SEMICOLON bloque
    (22) funcion -> . FUNCION LESSTHAN VOID GREATERTHAN ID LPAREN param RPAREN vars SEMICOLON bloque
    (23) funcion -> . FUNCION LESSTHAN VOID GREATERTHAN ID LPAREN param RPAREN SEMICOLON bloque
    (5) principal -> . PRINCIPAL LPAREN RPAREN bloque

    VAR             shift and go to state 8
    FUNCION         shift and go to state 9
    PRINCIPAL       shift and go to state 10

    vars                           shift and go to state 5
    funcion                        shift and go to state 6
    principal                      shift and go to state 7

state 5

    (1) program -> PROGRAMA ID SEMICOLON vars . funcion principal
    (3) program -> PROGRAMA ID SEMICOLON vars . principal
    (20) funcion -> . FUNCION LESSTHAN tipo_simple GREATERTHAN ID LPAREN param RPAREN vars SEMICOLON bloque
    (21) funcion -> . FUNCION LESSTHAN tipo_simple GREATERTHAN ID LPAREN param RPAREN SEMICOLON bloque
    (22) funcion -> . FUNCION LESSTHAN VOID GREATERTHAN ID LPAREN param RPAREN vars SEMICOLON bloque
    (23) funcion -> . FUNCION LESSTHAN VOID GREATERTHAN ID LPAREN param RPAREN SEMICOLON bloque
    (5) principal -> . PRINCIPAL LPAREN RPAREN bloque

    FUNCION         shift and go to state 9
    PRINCIPAL       shift and go to state 10

    funcion                        shift and go to state 11
    principal                      shift and go to state 12

state 6

    (2) program -> PROGRAMA ID SEMICOLON funcion . principal
    (5) principal -> . PRINCIPAL LPAREN RPAREN bloque

    PRINCIPAL       shift and go to state 10

    principal                      shift and go to state 13

state 7

    (4) program -> PROGRAMA ID SEMICOLON principal .

    $end            reduce using rule 4 (program -> PROGRAMA ID SEMICOLON principal .)


state 8

    (6) vars -> VAR . vars_aux
    (7) vars_aux -> . tipo_simple vars_aux1
    (8) vars_aux -> . tipo_simple vars_aux1 vars_aux
    (14) tipo_simple -> . INT
    (15) tipo_simple -> . FLOAT
    (16) tipo_simple -> . CHAR

    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    vars_aux                       shift and go to state 14
    tipo_simple                    shift and go to state 15

state 9

    (20) funcion -> FUNCION . LESSTHAN tipo_simple GREATERTHAN ID LPAREN param RPAREN vars SEMICOLON bloque
    (21) funcion -> FUNCION . LESSTHAN tipo_simple GREATERTHAN ID LPAREN param RPAREN SEMICOLON bloque
    (22) funcion -> FUNCION . LESSTHAN VOID GREATERTHAN ID LPAREN param RPAREN vars SEMICOLON bloque
    (23) funcion -> FUNCION . LESSTHAN VOID GREATERTHAN ID LPAREN param RPAREN SEMICOLON bloque

    LESSTHAN        shift and go to state 19


state 10

    (5) principal -> PRINCIPAL . LPAREN RPAREN bloque

    LPAREN          shift and go to state 20


state 11

    (1) program -> PROGRAMA ID SEMICOLON vars funcion . principal
    (5) principal -> . PRINCIPAL LPAREN RPAREN bloque

    PRINCIPAL       shift and go to state 10

    principal                      shift and go to state 21

state 12

    (3) program -> PROGRAMA ID SEMICOLON vars principal .

    $end            reduce using rule 3 (program -> PROGRAMA ID SEMICOLON vars principal .)


state 13

    (2) program -> PROGRAMA ID SEMICOLON funcion principal .

    $end            reduce using rule 2 (program -> PROGRAMA ID SEMICOLON funcion principal .)


state 14

    (6) vars -> VAR vars_aux .

    FUNCION         reduce using rule 6 (vars -> VAR vars_aux .)
    PRINCIPAL       reduce using rule 6 (vars -> VAR vars_aux .)
    SEMICOLON       reduce using rule 6 (vars -> VAR vars_aux .)


state 15

    (7) vars_aux -> tipo_simple . vars_aux1
    (8) vars_aux -> tipo_simple . vars_aux1 vars_aux
    (9) vars_aux1 -> . vars_aux2 SEMICOLON
    (10) vars_aux1 -> . vars_aux2 COMMA vars_aux1
    (11) vars_aux2 -> . ID
    (12) vars_aux2 -> . ID LSQUARE CTE_I RSQUARE
    (13) vars_aux2 -> . ID LSQUARE CTE_I RSQUARE LSQUARE CTE_I RSQUARE

    ID              shift and go to state 24

    vars_aux1                      shift and go to state 22
    vars_aux2                      shift and go to state 23

state 16

    (14) tipo_simple -> INT .

    ID              reduce using rule 14 (tipo_simple -> INT .)
    GREATERTHAN     reduce using rule 14 (tipo_simple -> INT .)


state 17

    (15) tipo_simple -> FLOAT .

    ID              reduce using rule 15 (tipo_simple -> FLOAT .)
    GREATERTHAN     reduce using rule 15 (tipo_simple -> FLOAT .)


state 18

    (16) tipo_simple -> CHAR .

    ID              reduce using rule 16 (tipo_simple -> CHAR .)
    GREATERTHAN     reduce using rule 16 (tipo_simple -> CHAR .)


state 19

    (20) funcion -> FUNCION LESSTHAN . tipo_simple GREATERTHAN ID LPAREN param RPAREN vars SEMICOLON bloque
    (21) funcion -> FUNCION LESSTHAN . tipo_simple GREATERTHAN ID LPAREN param RPAREN SEMICOLON bloque
    (22) funcion -> FUNCION LESSTHAN . VOID GREATERTHAN ID LPAREN param RPAREN vars SEMICOLON bloque
    (23) funcion -> FUNCION LESSTHAN . VOID GREATERTHAN ID LPAREN param RPAREN SEMICOLON bloque
    (14) tipo_simple -> . INT
    (15) tipo_simple -> . FLOAT
    (16) tipo_simple -> . CHAR

    VOID            shift and go to state 26
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    tipo_simple                    shift and go to state 25

state 20

    (5) principal -> PRINCIPAL LPAREN . RPAREN bloque

    RPAREN          shift and go to state 27


state 21

    (1) program -> PROGRAMA ID SEMICOLON vars funcion principal .

    $end            reduce using rule 1 (program -> PROGRAMA ID SEMICOLON vars funcion principal .)


state 22

    (7) vars_aux -> tipo_simple vars_aux1 .
    (8) vars_aux -> tipo_simple vars_aux1 . vars_aux
    (7) vars_aux -> . tipo_simple vars_aux1
    (8) vars_aux -> . tipo_simple vars_aux1 vars_aux
    (14) tipo_simple -> . INT
    (15) tipo_simple -> . FLOAT
    (16) tipo_simple -> . CHAR

    FUNCION         reduce using rule 7 (vars_aux -> tipo_simple vars_aux1 .)
    PRINCIPAL       reduce using rule 7 (vars_aux -> tipo_simple vars_aux1 .)
    SEMICOLON       reduce using rule 7 (vars_aux -> tipo_simple vars_aux1 .)
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    tipo_simple                    shift and go to state 15
    vars_aux                       shift and go to state 28

state 23

    (9) vars_aux1 -> vars_aux2 . SEMICOLON
    (10) vars_aux1 -> vars_aux2 . COMMA vars_aux1

    SEMICOLON       shift and go to state 29
    COMMA           shift and go to state 30


state 24

    (11) vars_aux2 -> ID .
    (12) vars_aux2 -> ID . LSQUARE CTE_I RSQUARE
    (13) vars_aux2 -> ID . LSQUARE CTE_I RSQUARE LSQUARE CTE_I RSQUARE

    SEMICOLON       reduce using rule 11 (vars_aux2 -> ID .)
    COMMA           reduce using rule 11 (vars_aux2 -> ID .)
    LSQUARE         shift and go to state 31


state 25

    (20) funcion -> FUNCION LESSTHAN tipo_simple . GREATERTHAN ID LPAREN param RPAREN vars SEMICOLON bloque
    (21) funcion -> FUNCION LESSTHAN tipo_simple . GREATERTHAN ID LPAREN param RPAREN SEMICOLON bloque

    GREATERTHAN     shift and go to state 32


state 26

    (22) funcion -> FUNCION LESSTHAN VOID . GREATERTHAN ID LPAREN param RPAREN vars SEMICOLON bloque
    (23) funcion -> FUNCION LESSTHAN VOID . GREATERTHAN ID LPAREN param RPAREN SEMICOLON bloque

    GREATERTHAN     shift and go to state 33


state 27

    (5) principal -> PRINCIPAL LPAREN RPAREN . bloque
    (28) bloque -> . LBRACKET mult_estatutos RBRACKET

    LBRACKET        shift and go to state 35

    bloque                         shift and go to state 34

state 28

    (8) vars_aux -> tipo_simple vars_aux1 vars_aux .

    FUNCION         reduce using rule 8 (vars_aux -> tipo_simple vars_aux1 vars_aux .)
    PRINCIPAL       reduce using rule 8 (vars_aux -> tipo_simple vars_aux1 vars_aux .)
    SEMICOLON       reduce using rule 8 (vars_aux -> tipo_simple vars_aux1 vars_aux .)


state 29

    (9) vars_aux1 -> vars_aux2 SEMICOLON .

    INT             reduce using rule 9 (vars_aux1 -> vars_aux2 SEMICOLON .)
    FLOAT           reduce using rule 9 (vars_aux1 -> vars_aux2 SEMICOLON .)
    CHAR            reduce using rule 9 (vars_aux1 -> vars_aux2 SEMICOLON .)
    FUNCION         reduce using rule 9 (vars_aux1 -> vars_aux2 SEMICOLON .)
    PRINCIPAL       reduce using rule 9 (vars_aux1 -> vars_aux2 SEMICOLON .)
    SEMICOLON       reduce using rule 9 (vars_aux1 -> vars_aux2 SEMICOLON .)


state 30

    (10) vars_aux1 -> vars_aux2 COMMA . vars_aux1
    (9) vars_aux1 -> . vars_aux2 SEMICOLON
    (10) vars_aux1 -> . vars_aux2 COMMA vars_aux1
    (11) vars_aux2 -> . ID
    (12) vars_aux2 -> . ID LSQUARE CTE_I RSQUARE
    (13) vars_aux2 -> . ID LSQUARE CTE_I RSQUARE LSQUARE CTE_I RSQUARE

    ID              shift and go to state 24

    vars_aux2                      shift and go to state 23
    vars_aux1                      shift and go to state 36

state 31

    (12) vars_aux2 -> ID LSQUARE . CTE_I RSQUARE
    (13) vars_aux2 -> ID LSQUARE . CTE_I RSQUARE LSQUARE CTE_I RSQUARE

    CTE_I           shift and go to state 37


state 32

    (20) funcion -> FUNCION LESSTHAN tipo_simple GREATERTHAN . ID LPAREN param RPAREN vars SEMICOLON bloque
    (21) funcion -> FUNCION LESSTHAN tipo_simple GREATERTHAN . ID LPAREN param RPAREN SEMICOLON bloque

    ID              shift and go to state 38


state 33

    (22) funcion -> FUNCION LESSTHAN VOID GREATERTHAN . ID LPAREN param RPAREN vars SEMICOLON bloque
    (23) funcion -> FUNCION LESSTHAN VOID GREATERTHAN . ID LPAREN param RPAREN SEMICOLON bloque

    ID              shift and go to state 39


state 34

    (5) principal -> PRINCIPAL LPAREN RPAREN bloque .

    $end            reduce using rule 5 (principal -> PRINCIPAL LPAREN RPAREN bloque .)


state 35

    (28) bloque -> LBRACKET . mult_estatutos RBRACKET
    (29) mult_estatutos -> . estatuto
    (30) mult_estatutos -> . estatuto mult_estatutos
    (31) mult_estatutos -> . empty
    (32) estatuto -> . asigna
    (33) estatuto -> . llamada
    (34) estatuto -> . lee
    (35) estatuto -> . escribe
    (36) estatuto -> . condicion
    (37) estatuto -> . ciclo_w
    (38) estatuto -> . retorno
    (39) estatuto -> . ciclo_f
    (27) empty -> .
    (40) asigna -> . variable EQUAL exp SEMICOLON
    (41) llamada -> . ID LPAREN mult_exp RPAREN
    (45) lee -> . LEE LPAREN variable RPAREN
    (46) escribe -> . ESCRIBE LPAREN mult_exp RPAREN SEMICOLON
    (47) escribe -> . LPAREN mult_cte_s RPAREN SEMICOLON
    (77) condicion -> . SI LPAREN exp RPAREN ENTONCES bloque SINO bloque SEMICOLON
    (78) condicion -> . SI LPAREN exp RPAREN ENTONCES bloque SEMICOLON
    (79) ciclo_w -> . MIENTRAS LPAREN exp RPAREN HAZ bloque
    (84) retorno -> . REGRESA exp SEMICOLON
    (80) ciclo_f -> . DESDE asigna HASTA CTE_I HACER bloque
    (17) variable -> . ID LSQUARE exp RSQUARE LSQUARE exp RSQUARE
    (18) variable -> . ID LSQUARE exp RSQUARE
    (19) variable -> . ID

    RBRACKET        reduce using rule 27 (empty -> .)
    ID              shift and go to state 52
    LEE             shift and go to state 54
    ESCRIBE         shift and go to state 55
    LPAREN          shift and go to state 53
    SI              shift and go to state 56
    MIENTRAS        shift and go to state 57
    REGRESA         shift and go to state 58
    DESDE           shift and go to state 59

    mult_estatutos                 shift and go to state 40
    estatuto                       shift and go to state 41
    empty                          shift and go to state 42
    asigna                         shift and go to state 43
    llamada                        shift and go to state 44
    lee                            shift and go to state 45
    escribe                        shift and go to state 46
    condicion                      shift and go to state 47
    ciclo_w                        shift and go to state 48
    retorno                        shift and go to state 49
    ciclo_f                        shift and go to state 50
    variable                       shift and go to state 51

state 36

    (10) vars_aux1 -> vars_aux2 COMMA vars_aux1 .

    INT             reduce using rule 10 (vars_aux1 -> vars_aux2 COMMA vars_aux1 .)
    FLOAT           reduce using rule 10 (vars_aux1 -> vars_aux2 COMMA vars_aux1 .)
    CHAR            reduce using rule 10 (vars_aux1 -> vars_aux2 COMMA vars_aux1 .)
    FUNCION         reduce using rule 10 (vars_aux1 -> vars_aux2 COMMA vars_aux1 .)
    PRINCIPAL       reduce using rule 10 (vars_aux1 -> vars_aux2 COMMA vars_aux1 .)
    SEMICOLON       reduce using rule 10 (vars_aux1 -> vars_aux2 COMMA vars_aux1 .)


state 37

    (12) vars_aux2 -> ID LSQUARE CTE_I . RSQUARE
    (13) vars_aux2 -> ID LSQUARE CTE_I . RSQUARE LSQUARE CTE_I RSQUARE

    RSQUARE         shift and go to state 60


state 38

    (20) funcion -> FUNCION LESSTHAN tipo_simple GREATERTHAN ID . LPAREN param RPAREN vars SEMICOLON bloque
    (21) funcion -> FUNCION LESSTHAN tipo_simple GREATERTHAN ID . LPAREN param RPAREN SEMICOLON bloque

    LPAREN          shift and go to state 61


state 39

    (22) funcion -> FUNCION LESSTHAN VOID GREATERTHAN ID . LPAREN param RPAREN vars SEMICOLON bloque
    (23) funcion -> FUNCION LESSTHAN VOID GREATERTHAN ID . LPAREN param RPAREN SEMICOLON bloque

    LPAREN          shift and go to state 62


state 40

    (28) bloque -> LBRACKET mult_estatutos . RBRACKET

    RBRACKET        shift and go to state 63


state 41

    (29) mult_estatutos -> estatuto .
    (30) mult_estatutos -> estatuto . mult_estatutos
    (29) mult_estatutos -> . estatuto
    (30) mult_estatutos -> . estatuto mult_estatutos
    (31) mult_estatutos -> . empty
    (32) estatuto -> . asigna
    (33) estatuto -> . llamada
    (34) estatuto -> . lee
    (35) estatuto -> . escribe
    (36) estatuto -> . condicion
    (37) estatuto -> . ciclo_w
    (38) estatuto -> . retorno
    (39) estatuto -> . ciclo_f
    (27) empty -> .
    (40) asigna -> . variable EQUAL exp SEMICOLON
    (41) llamada -> . ID LPAREN mult_exp RPAREN
    (45) lee -> . LEE LPAREN variable RPAREN
    (46) escribe -> . ESCRIBE LPAREN mult_exp RPAREN SEMICOLON
    (47) escribe -> . LPAREN mult_cte_s RPAREN SEMICOLON
    (77) condicion -> . SI LPAREN exp RPAREN ENTONCES bloque SINO bloque SEMICOLON
    (78) condicion -> . SI LPAREN exp RPAREN ENTONCES bloque SEMICOLON
    (79) ciclo_w -> . MIENTRAS LPAREN exp RPAREN HAZ bloque
    (84) retorno -> . REGRESA exp SEMICOLON
    (80) ciclo_f -> . DESDE asigna HASTA CTE_I HACER bloque
    (17) variable -> . ID LSQUARE exp RSQUARE LSQUARE exp RSQUARE
    (18) variable -> . ID LSQUARE exp RSQUARE
    (19) variable -> . ID

  ! reduce/reduce conflict for RBRACKET resolved using rule 27 (empty -> .)
    RBRACKET        reduce using rule 27 (empty -> .)
    ID              shift and go to state 52
    LEE             shift and go to state 54
    ESCRIBE         shift and go to state 55
    LPAREN          shift and go to state 53
    SI              shift and go to state 56
    MIENTRAS        shift and go to state 57
    REGRESA         shift and go to state 58
    DESDE           shift and go to state 59

  ! RBRACKET        [ reduce using rule 29 (mult_estatutos -> estatuto .) ]

    estatuto                       shift and go to state 41
    mult_estatutos                 shift and go to state 64
    empty                          shift and go to state 42
    asigna                         shift and go to state 43
    llamada                        shift and go to state 44
    lee                            shift and go to state 45
    escribe                        shift and go to state 46
    condicion                      shift and go to state 47
    ciclo_w                        shift and go to state 48
    retorno                        shift and go to state 49
    ciclo_f                        shift and go to state 50
    variable                       shift and go to state 51

state 42

    (31) mult_estatutos -> empty .

    RBRACKET        reduce using rule 31 (mult_estatutos -> empty .)


state 43

    (32) estatuto -> asigna .

    ID              reduce using rule 32 (estatuto -> asigna .)
    LEE             reduce using rule 32 (estatuto -> asigna .)
    ESCRIBE         reduce using rule 32 (estatuto -> asigna .)
    LPAREN          reduce using rule 32 (estatuto -> asigna .)
    SI              reduce using rule 32 (estatuto -> asigna .)
    MIENTRAS        reduce using rule 32 (estatuto -> asigna .)
    REGRESA         reduce using rule 32 (estatuto -> asigna .)
    DESDE           reduce using rule 32 (estatuto -> asigna .)
    RBRACKET        reduce using rule 32 (estatuto -> asigna .)


state 44

    (33) estatuto -> llamada .

    ID              reduce using rule 33 (estatuto -> llamada .)
    LEE             reduce using rule 33 (estatuto -> llamada .)
    ESCRIBE         reduce using rule 33 (estatuto -> llamada .)
    LPAREN          reduce using rule 33 (estatuto -> llamada .)
    SI              reduce using rule 33 (estatuto -> llamada .)
    MIENTRAS        reduce using rule 33 (estatuto -> llamada .)
    REGRESA         reduce using rule 33 (estatuto -> llamada .)
    DESDE           reduce using rule 33 (estatuto -> llamada .)
    RBRACKET        reduce using rule 33 (estatuto -> llamada .)


state 45

    (34) estatuto -> lee .

    ID              reduce using rule 34 (estatuto -> lee .)
    LEE             reduce using rule 34 (estatuto -> lee .)
    ESCRIBE         reduce using rule 34 (estatuto -> lee .)
    LPAREN          reduce using rule 34 (estatuto -> lee .)
    SI              reduce using rule 34 (estatuto -> lee .)
    MIENTRAS        reduce using rule 34 (estatuto -> lee .)
    REGRESA         reduce using rule 34 (estatuto -> lee .)
    DESDE           reduce using rule 34 (estatuto -> lee .)
    RBRACKET        reduce using rule 34 (estatuto -> lee .)


state 46

    (35) estatuto -> escribe .

    ID              reduce using rule 35 (estatuto -> escribe .)
    LEE             reduce using rule 35 (estatuto -> escribe .)
